feat: 完善 IM MVP 核心链路与 MQ 一致性
- 补齐好友申请审批、私聊唯一建房、群聊创建邀请退群解散、会话同步、消息发送历史已读撤回等 IM MVP 核心能力
- 统一 WebSocket 事件封装与 RabbitMQ 投递模型，使 chat-service 仅负责业务落库和投递，notification-service 统一负责消费和多端下行
- 新增 clientMsgId 幂等、多端在线状态聚合、聊天缓存常量、通知侧房间广播修复，以及对应 SQL、接口字段和单元测试